SecondCommit_of_lesta_sim

--- a/lesta_sim/Docker/Dockerfile
+++ b/lesta_sim/Docker/Dockerfile
@@ -67,6 +67,8 @@ RUN apt-get update && apt-get install --yes \
     wget \
     zip \
     zsh
+
+RUN apt-get update && apt-get install ros-noetic-grid-map -y
     
 # Fix networkx compatibility for Python 3.8 before installing PyTorch
 RUN pip install 'networkx<3.0'
