--- a/lesta_sim/Docker/docker-compose-gui-nvidia.yaml
+++ b/lesta_sim/Docker/docker-compose-gui-nvidia.yaml
@@ -6,4 +6,5 @@ services:
     environment:
      - NVIDIA_VISIBLE_DEVICES=all
      - NVIDIA_DRIVER_CAPABILITIES=all
+     - LIBGL_ALWAYS_INDIRECT=0
     runtime: nvidia
