--- a/lesta_sim/Docker/docker-compose-gui.yaml
+++ b/lesta_sim/Docker/docker-compose-gui.yaml
@@ -6,3 +6,8 @@ services:
     environment:
      - DISPLAY=${DISPLAY}
      - QT_X11_NO_MITSHM=1
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
