--- a/lesta_sim/Docker/docker-compose.yaml
+++ b/lesta_sim/Docker/docker-compose.yaml
@@ -10,10 +10,14 @@ services:
     privileged: true
     network_mode: host
     volumes:
+      - /home/miiiiiryeong/traversability_application/lesta_sim:/workspace/docker_root
       - /dev/dri:/dev/dri
       - /tmp/.X11-unix:/tmp/.X11-unix
-      - /home/miiiiiryeong/lesta_sim:/workspace/docker_root
       - /tmp/.docker.xauth:/tmp/.docker.xauth:rw
+      - /usr/lib/x86_64-linux-gnu:/usr/lib/x86_64-linux-gnu:ro
+      - /usr/lib/x86_64-linux-gnu/libGL.so.1:/usr/lib/x86_64-linux-gnu/libGL.so.1:ro
     stdin_open: true
     tty: true
+    privileged: true
+    network_mode: host
     entrypoint: ["/workspace/docker_root/Docker/lesta_entrypoint.sh"]
